adding owner route and jwt security
